Add support for comments and other minor adjustments

--- a/config/_default/languages.zh.toml
+++ b/config/_default/languages.zh.toml
@@ -16,7 +16,7 @@ dateFormat = "2006-01-02"
   name = "Mercury"
   image = "my_avatar.png"
   headline = "A student"
-  # bio = "A little bit about you"
+  bio = "A student"
   links = [
     { email = "mailto:signormercurio@gmail.com" },
   #   { link = "https://link-to-some-website.com/" },
