--- a/config/_default/languages.zh.toml
+++ b/config/_default/languages.zh.toml
@@ -52,7 +52,7 @@ dateFormat = "2006-01-02"
   #   { soundcloud = "https://soundcloud.com/username" },
   #   { stack-overflow = "https://stackoverflow.com/users/userid/username" },
   #   { steam = "https://steamcommunity.com/profiles/userid" },
-  #   { telegram = "https://t.me/username" },
+    { telegram = "https://t.me/m9r_at_tG" },
   #   { tiktok = "https://tiktok.com/@username" },
   #   { tumblr = "https://username.tumblr.com" },
   #   { twitch = "https://twitch.tv/username" },
