--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,12 +2,13 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/getting-started/
 
-# baseURL = "https://blog.sigmerc.top"
+baseURL = "https://blog.sigmerc.top"
 defaultContentLanguage = "zh"
 
 enableRobotsTXT = true
 paginate = 10
 summaryLength = 0
+enableGitInfo = true
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
