remove inaccurate word count/reading time and update tailscale
Signed-off-by: Mercurio <signormercurio@gmail.com>

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -40,10 +40,10 @@ enableCodeCopy = true
   showHeadingAnchors = true
   showPagination = true
   invertPagination = true
-  showReadingTime = true
+  showReadingTime = false
   showTableOfContents = true
   showTaxonomies = true
-  showWordCount = true
+  showWordCount = false
   showComments = true
   # sharingLinks = ["facebook", "twitter", "pinterest", "reddit", "linkedin", "email"]
 
