add new posts in 2025
Signed-off-by: SignorMercurio <signormercurio@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,9 +6,11 @@ baseURL = "https://blog.sigmerc.top"
 defaultContentLanguage = "zh-cn"
 
 enableRobotsTXT = true
-paginate = 10
 summaryLength = 0
 enableGitInfo = true
+
+[pagination]
+  pagerSize = 10
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
