--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -3,7 +3,7 @@
 # https://jpanther.github.io/congo/docs/getting-started/
 
 baseURL = "https://blog.sigmerc.top"
-defaultContentLanguage = "zh-cn"
+defaultContentLanguage = "en"
 
 enableRobotsTXT = true
 summaryLength = 0
